Changelog
=========

1.0b8 (unreleased)
------------------

- Remove title field from the comment form and replace it with an auto-generated
  title ("John Doe on Welcome to Plone").
  [timo]
  
- Fix http://dev.plone.org/plone/ticket/11098: "Comment byline shows login 
  name, not full name" 
  [kiorky]

- Make sure the __parent__ pointer (the conversation) of a comment is not 
  acquisition wrapped in conversation.addComment. This fixes 
  http://dev.plone.org/plone/ticket/11157.
  [timo]

- Revert r35608 since this was breaking the comment moderation bulk actions. 
  The BulkActionsView expects the absolute path of the comments without the 
  portal url (e.g. '/plone/doc1/++conversation++default/1285346769126020'). 
  This fixes http://dev.plone.org/plone/ticket/11156.
  [timo]

- Use "(function($) { /* some code that uses $ */ })(jQuery)" instead of
  "$(document).ready(function(){ /* some code that uses $ */ });" to invoke 
  jQuery code.
  [timo]

- Finnish translation added.
  [saffe]


1.0b7 (2010-09-15)
------------------

* Captcha plugin support for collective.z3cform.norobots (version >= 1.1) added. 
  [saffe]

* Store dates in utc and not in local time. Display local time
  [do3cc]

* Fetch context for the comment view with "context = aq_inner(self.context)".
  [timo]
 
* Raise an unauthorized error when authenticated users try to post a comment
  on a content object that has discussion disabled. Thanks to vincentfrentin
  for reporting this.
  [timo]
  
* Czech translation added.
  [naro]

* Clean up code with PyLint.
  [timo]

* Make Javascripts pass JSLint validation.
  [timo]

* Put email notification subscribers into their own zcml file so it is easier
  for integrators to override them.
  [timo]
  
* Plain text and intelligent text options for comment text added to preserve 
  basic text structure and to make links clickable.
  [timo]

* Rewrote all tal:condition in comments.pt. The authenticated user has